# yalce

./: .ccls  .env  .env.arch  .env.backup  .gitignore  .gitmodules  .ocamlformat  ARCH_LINUX_BUILD.md  BachWTC.ylc  CMakeLists.txt  Columnar.ylc  DSP.ylc  INFERENCE_SIMPLIFICATION.md  Makefile  Patterns.ylc  README.md  ROW_POLYMORPHISM.md  SCHEDULER_REDESIGN.md  _launchpad.ylc  _wavetable.py  a.out  acid.ylc  acid_combo.ylc  array_access.ylc  asymp.m  audio_jit.ylc  audio_test.ylc  bach_wtc_1.ylc  bach_wtc_1_poly.ylc  build-wasm.sh  build_wasm.sh  c_script.c  chirp.ylc  chirp_kick.ylc  chops.ylc  chorale_markov.ylcnb  closure_trampoline.c  compile_commands.json  cool_beats.ylc  cool_beats_vis.ylc  (+116 more)
.dbg/: cor.debug.json  dap_config.json
.ropeproject/: autoimport.db
app/: ylc
audio/: audio.c  node.c  node.h
cor/: Makefile  cor  cor.c  cor.h  example.c
dev/: Untitled.ipynb  yalce_slime.lua  ylc.vim  ylc_slime.lua
dev/kernel/: README.md  conn.json  pyproject.toml  setup.py
dev/kernel/.ropeproject/: autoimport.db
dev/kernel/ylc_kernel/: __init__.py  __main__.py  install.py  kernel.py
docs/: Makefile  api-reference.md  audio-engine.md  build.py  deforestation-design.md  examples.md  getting-started.md  getting_started.md  index.html  index.md  jit.wasm  main.js  navigation.md  style.css  template.html  type-system.md  wasm-parser.js  wasm.html  ylc-ref.md
docs-js/: index.html  main.js  package-lock.json  package.json  vite.config.js
engine/: Makefile  alloc.c  alloc.h  audio_graph.c  audio_graph.h  audio_instructions.c  audio_instructions.h  audio_loop.c  audio_loop.h  audio_loop_utils.c  audio_loop_utils.h  audio_routing.c  audio_routing.h  block_queue.c  block_queue.h  bus.c  bus.h  clap_host.c  clap_host.h  clap_node.c  clap_node.h  clap_util.h  common.h  ctx.c  ctx.h  envelope.c  envelope.h  ext_lib.h  faust.h  filter.c  filter.h  filter_ext.h  filters.c  filters.h  glue.c  glue.h  group.c  group.h  gverb.c  lfo.c  (+34 more)
engine_blobs/: Makefile  (+10 more)
(+1284 files in other folders)
